CSS fix to avoid applying font-size modification twice to search results SPAN elements. Addition of more visible meta-data to people and site entities.

--- a/aikau/src/main/resources/alfresco/header/css/SearchBox.css
+++ b/aikau/src/main/resources/alfresco/header/css/SearchBox.css
@@ -152,9 +152,11 @@
          .alf-livesearch-item {
             margin-left: 56px;
             line-height: 1.2em;
-            span,
-            span a {
+            &>span {
                font-size: 93%;
+               color: @de-emphasized-font-color;
+            }
+            &>span a {
                color: @de-emphasized-font-color;
             }
          }
